Major changes made to AvailableCaddies view controller. Data passed along views for reservation process.

--- a/carpoolApp_v1.0/CaddiesList.plist
+++ b/carpoolApp_v1.0/CaddiesList.plist
@@ -28,7 +28,7 @@
 	</dict>
 	<dict>
 		<key>Name</key>
-		<string>Shannon Daniels</string>
+		<string>Erik Schweiger</string>
 		<key>Rounds</key>
 		<integer>3</integer>
 		<key>Handicap</key>
@@ -40,7 +40,7 @@
 	</dict>
 	<dict>
 		<key>Name</key>
-		<string>Jorge Fox</string>
+		<string>AJ Skiba</string>
 		<key>Rounds</key>
 		<integer>22</integer>
 		<key>Handicap</key>
@@ -52,7 +52,7 @@
 	</dict>
 	<dict>
 		<key>Name</key>
-		<string>Rex Moreno</string>
+		<string>Matt Hills</string>
 		<key>Rounds</key>
 		<integer>16</integer>
 		<key>Handicap</key>
