User location integrated and being passed to ChooseCourse view controller.

--- a/Loop/Info.plist
+++ b/Loop/Info.plist
@@ -53,5 +53,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSLocationWhenInUsageDescription</key>
+	<false/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<true/>
 </dict>
 </plist>
